<resources>
    <string name="app_name">Kissan</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="service_provider">Service Provider</string>
    <string name="choose_your_role">Choose Your Role</string>
    <string name="farmer">Farmer</string>
    <string name="sign_in">Sign In</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="state">State</string>
    <string name="village">Village</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="subtitle_otp">We will send you a One Time Password on your phone No.</string>
    <string name="enter_6_digit_otp">Enter 6 digit OTP</string>
    <string name="submit">Submit</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verification">Verification</string>
    <string name="search">Search</string>
    <string name="services_available">Services Available</string>
    <string name="title">Title</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="service_name">Service name</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="enter_coupon">Enter Coupon</string>
    <string name="book_service">Book Service</string>
    <string name="age">Age</string>
    <string name="cancel">Cancel</string>
    <string name="support">Support</string>
    <string name="share">Share</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="adhaar_card_number">Adhaar Card Number</string>
    <string name="services">Services</string>
    <string name="add_more_services">+ Add more Services</string>
    <string name="save">Save</string>
    <string name="duty">Duty</string>
    <string name="kisan_app">Kisan App</string>
    <string name="account">Account</string>
    <string name="click_to_change_status">Click to change status</string>
    <string name="price_per_hour">Price Per Hour</string>
    <string name="price_per_hectare">Price Per Hectare</string>
    <string name="customer_profile">Customer Profile</string>
    <string name="farmer_name">Farmer Name</string>
    <string name="service_wanted">Service wanted</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="service">Service</string>
    <string name="add_services">Add Services</string>
</resources>