<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:backgroundTint="@color/background"
        app:cardCornerRadius="30dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/idSignInHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/sign_in"
                android:textSize="36sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/idMobileHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idSignInHeader"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/mobile_no"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/idMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idMobileHeader"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/mobile_no"
                android:minHeight="48dp"
                android:inputType="number"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/idPasswordHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idMobileNumber"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/password"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/idPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idPasswordHeader"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="no"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="5dp"
                android:textColorHint="#78909C"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/idForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/idPassword"
                android:text="@string/forgot_password"
                android:layout_alignParentEnd="true"
                android:layout_margin="15dp"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:id="@+id/login_button"
                android:text="@string/login"
                android:layout_below="@+id/idForgotPassword"
                android:layout_margin="10dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:id="@+id/createAccount_button"
                android:text="@string/create_account"
                android:layout_below="@+id/login_button"
                android:layout_margin="10dp"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>



</RelativeLayout>