<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_email"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="5sp"
        android:hint="Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="5dp"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="5sp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="5dp"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="5sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="5dp"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        android:autofillHints="no" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:id="@+id/login_button"
        android:text="@string/login"
        android:layout_below="@+id/login_password"
        android:padding="5sp"
        android:layout_margin="5sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:id="@+id/createAccount_button"
        android:text="@string/create_account"
        android:layout_below="@+id/login_button"
        android:padding="5sp"
        android:layout_margin="5sp"
        />

</RelativeLayout>